--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,12 @@ h3 {
     display: none;
 }
 
+h3 p {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
+
 h3 ul {
     display: inline-block;
     *display: inline;
