More experimenting with the layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,14 @@
 @import "{{ site.theme }}";
 
 h3 {
-    display: none;
+    font-variant: small-caps;
 }
 
 h3 + p, h3 + ul {
     display: block;
     float: left;
+}
+
+h2#education {
+    clear: both;
 }
