--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,12 +4,13 @@
 @import "{{ site.theme }}";
 
 h3 {
-    font-variant: small-caps;
+    display: none;
 }
 
-h3 {
+h3 + p, h3 + ul {
     display: block;
     float: left;
+    font-size: 0.75em;
 }
 
 h2#education {
