--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,11 @@ h3 + p, h3 + ul {
     display: block;
     float: left;
     font-size: 0.75em;
+    padding: 2em;
+}
+
+h3 + ul {
+    list-style-type: none;
 }
 
 h2#education {
