More experimenting with the layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ h3 + p, h3 + ul {
     display: block;
     float: left;
     font-size: 0.75em;
-    padding: 2em;
+    padding-right: 3em;
 }
 
 h3 + ul {
