--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,3 +27,30 @@ h2 + ul + li {
 h2#education {
     clear: both;
 }
+
+@media print {
+/* Setting content width, unsetting floats and margins */
+/* Attention: the classes and IDs vary from theme to theme. Thus, set own classes here */
+#content,#page {
+width: 100%;
+margin: 0;
+float: none;
+}
+
+/** Setting margins */
+@page { margin: 2cm }
+
+/* Or: */
+@page :left {
+margin: 1cm;
+}
+
+@page :right {
+margin: 1cm;
+}
+
+/* The first page of a print can be manipulated as well */
+@page :first {
+  margin: 1cm 2cm;
+}
+}
