--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,10 +31,10 @@ h2#education {
 @media print {
 /* Setting content width, unsetting floats and margins */
 /* Attention: the classes and IDs vary from theme to theme. Thus, set own classes here */
-#content,#page {
-width: 100%;
-margin: 0;
-float: none;
+#content, #page {
+    width: 100%;
+    margin: 0;
+    float: none;
 }
 
 /** Setting margins */
@@ -42,15 +42,31 @@ float: none;
 
 /* Or: */
 @page :left {
-margin: 1cm;
+    margin: 1cm;
 }
 
 @page :right {
-margin: 1cm;
+    margin: 1cm;
 }
 
 /* The first page of a print can be manipulated as well */
 @page :first {
-  margin: 1cm 2cm;
+    margin: 1cm 2cm;
+}
+
+body {
+    font: 13pt Georgia, "Times New Roman", Times, serif;
+    line-height: 1.3;
+    background: #fff !important;
+    color: #000;
+}
+
+h1 {
+    font-size: 24pt;
+}
+
+h2, h3, h4 {
+    font-size: 14pt;
+    margin-top: 25px;
 }
 }
