--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,6 @@ h3 {
 }
 
 h3 + p, h3 + ul {
-    display: block;
     float: left;
     font-size: 0.75em;
     padding-right: 3em;
@@ -30,8 +29,7 @@ h2#education {
 
 @media (max-width: 690px) {
     h3 + p, h3 + ul {
-        display: inline;
-        padding-right: 0;
+        padding: 0;
         clear: both;
     }
 }
