Experiment with responsive layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,38 +30,6 @@ h2#education {
 @media (max-width: 690px) {
     h3 + p, h3 + ul {
         padding: 0;
-        clear: both;
+        float: none;
     }
-}
-
-@media print {
-/** Setting margins */
-@page { 
-    margin: 2cm;
-}
-
-/* Or: */
-@page :left {
-    margin: 3cm;
-}
-
-@page :right {
-    margin: 3cm;
-}
-
-body {
-    font: 13pt Georgia, "Times New Roman", Times, serif;
-    line-height: 1.3;
-    background: #fff !important;
-    color: #000;
-}
-
-h1 {
-    font-size: 24pt;
-}
-
-h2, h3, h4 {
-    font-size: 14pt;
-    margin-top: 25px;
-}
 }
