Experiment with responsive layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@ h2#education {
 
 @media (max-width: 690px) {
     h3 + p, h3 + ul {
-        padding: 0;
+        padding-left: 0;
         float: none;
     }
 }
