--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,11 +17,9 @@ ul {
     list-style-type: none;
 }
 
-/*
 h2 + ul + li {
-    margin: 0 0 0.75em 0;
+    margin: 0 0 0.75em 0 !important;
 }
-*/
 
 h2#education {
     clear: both;
