Experiment with responsive layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,8 +17,8 @@ ul {
     list-style-type: none;
 }
 
-h2 + ul + li {
-    margin: 0 0 0.75em 0 !important;
+h2 + ul > li {
+    margin: 0 0 0.75em 0;
 }
 
 h2#education {
