Experiment with responsive layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ h3 + p, h3 + ul {
     float: left;
     font-size: 0.75em;
     padding-right: 3em;
-    padding-bottom: 2em;
+    margin-bottom: 0.75em;
 }
 
 ul {
