--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ h3 {
     display: none;
 }
 
-h3 + p, h3 + ul {
+h3 + ul {
     float: left;
     font-size: 0.75em;
     padding-right: 3em;
@@ -27,11 +27,8 @@ h2#education {
 }
 
 @media (max-width: 690px) {
-    h3 + p, h3 + ul {
-        float: none;
-    }
-
     h3 + ul {
+        float: none;
         padding: 0 !important;
     }
 
