--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,11 @@ h2 + ul > li {
     margin: 0 0 0.75em 0;
 }
 
+li > img {
+    width: 12px;
+    height: 12px;
+}
+
 h2#education {
     clear: both;
 }
