--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,5 +51,9 @@ h2#education {
         margin-left: 2.54cm;
         margin-right: 2.54cm;
     }
+
+    body {
+        font-size: 80%;
+    }
 }
 
