Experiment more with the printing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,8 +48,8 @@ h2#education {
 @media print {
     @page {
         size: letter portrait;
-        margin-left: 2.54cm;
-        margin-right: 2.54cm;
+        /* margin-left: 2.54cm;
+        margin-right: 2.54cm; */
     }
 
     body {
