Tweak the styling on professional experience descriptions

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,10 @@ h2 + ul > li {
     margin: 0 0 0.75em 0;
 }
 
+h2 + ul + li:nth-child(2) {
+    font-size: 0.8em;
+}
+
 li > img {
     width: 12px;
     height: 12px;
