--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,8 +22,13 @@ h2 + ul > li {
     margin: 0 0 0.75em 0;
 }
 
+h2 + ul > li > p:nth-child(1) {
+    margin-bottom: 0.5em;
+}
+
 h2 + ul > li > p:nth-child(2) {
     font-size: 0.8em;
+    margin-top: 0;
 }
 
 li > img {
