Tweak the print settings for generating a pdf of the cv

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,12 +57,16 @@ h2#education {
 @media print {
     @page {
         size: letter portrait;
-        /* margin-left: 2.54cm;
-        margin-right: 2.54cm; */
+        margin-left: 2.54cm;
+        margin-right: 2.54cm;
     }
 
     body {
         font-size: 80%;
+    }
+
+    div {
+        font-family: Charter;
     }
 }
 
