Tweak the top/bottom padding on print

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,6 +64,8 @@ h2#education {
     div {
         font-family: Charter !important;
         font-size: 80% !important;
+        padding-top: 3em !important;
+        padding-bottom: 3em !important;
     }
 }
 
