--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,8 +66,8 @@ h2#education {
         font-size: 80% !important;
         padding-top: 3em !important;
         padding-bottom: 3em !important;
-        padding-left: 2em !important;
-        padding-right: 2em !important;
+        margin-left: 2em !important;
+        margin-right: 2em !important;
     }
 }
 
