Change the print text color to black

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,6 +64,7 @@ h2#education {
     div {
         font-family: Charter !important;
         font-size: 80% !important;
+        color: black;
         padding-top: 3em !important;
         padding-bottom: 3em !important;
         margin-left: 3em !important;
